# flask-magql

./: .flake8  CHANGES.md  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yaml  tests.yaml
docs/: api.md  conf.py  index.md  multipart.md  start.md
requirements/: dev.txt  tests.in  tests.txt  types.in  types.txt  typing.in  typing.txt
src/flask_magql/: __init__.py  _files.py  _views.py  extension.py  files.py
src/flask_magql/templates/magql/: conveyor.html  graphiql.html
tests/: conftest.py  test_decorators.py  test_errors.py  test_flask_sqlalchemy.py  test_multipart.py  test_routes.py
