[project]
name = "flask-magql"
version = "1.0.0.dev"
description = "Serve a Magql GraphQL API with Flask."
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [{name = "David Lord", email = "davidism@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "magql>=1",
    "flask>=2.3",
]

[project.urls]
Documentation = "https://flask-magql.autoinvent.dev"
Changes = "https://flask-magql.autoinvent.dev/changes.html"
Source = "https://github.com/autoinvent/magql/"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "docs/",
    "requirements/",
    "tests/",
    "CHANGES.md",
    "tox.ini",
]
exclude = ["docs/_build/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["flask_magql", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
python_version = "3.10"
files = ["src/flask_magql", "tests"]
show_error_codes = true
pretty = true
strict = true

[tool.pyright]
pythonVersion = "3.10"
include = ["src/flask_magql", "tests"]
typeCheckingMode = "basic"
